# stackchan_lorrie

.github/workflows/: build.yml
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: main.cpp
firmware/main/hal/: hal_mcp.cpp  hal_servo.cpp  hal_ws_avatar.cpp
firmware/main/hal/board/: stackchan.cc  stackchan_display.cc
firmware/main/hal/utils/secret_logic/: secret_logic.cpp  secret_logic.h
firmware/main/stackchan/motion/: motion.cpp  motion.h  motion_math.cpp  motion_math.h  servo.cpp  servo.h
firmware/patches/: xiaozhi-esp32.patch
firmware/tests/: CMakeLists.txt  motion_math_test.cpp
